# IEEE754repr

./: .gitignore  LICENSE  Makefile  README.md  ieee.py  ieee754.py  pyproject.toml  setup.py
src/ieee754repr/: ieee754.py
src/ieee754repr/pfloat/: bind.c  pfloat.c  pfloat.h
test/: test.py
