#pyproject.toml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ieee754repr"
version = "1.0.0"
authors = [
    { name="syildizz", email="saygin.efe@hotmail.com" },
]
description = "IEEE754repr is small Python library which gives you the IEEE-754 representation of a floating point number."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
]

[project.urls]
Homepage = "https://github.com/syildizz/IEEE754repr"

